--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,6 @@
     </string-array>
 
 
-    <string name="savedBtn">"SAVED</string>
+    <string name="removeText">"REMOVE"</string>
 
 </resources>
