fixed recipe page and formatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,20 +27,19 @@
 
     <string-array name="Instructions">
         <item>
-            "1. In a large mixing bowl, whisk together buttermilk,\n
-            hot sauce (optional, for added flavor), salt, and pepper in a mixing bowl.\n
-            2. Pour the vegetable oil in a skillet until it is about 3/4 inch deep. Heat to 350 degrees. \n
-            3. Prepare the breading by combining the flour, cornstarch,\n
-            onion powder, garlic powder, oregano, basil, white pepper, cayenne pepper, paprika, and salt.\n
-            4. Mix it thoroughly. Place the breaded chicken into the 350 degree oil. Fry each piece for 14 minutes."
+            "\n 1. In a large mixing bowl, whisk together buttermilk, hot sauce, salt, and pepper in a mixing bowl.
+            \n 2. Pour the vegetable oil about 3/4 inch deep. Heat to 350 degrees.
+            \n 3. Prepare the breading by combining the flour, cornstarch, onion powder, garlic powder, oregano, basil, white pepper, cayenne pepper, paprika, and salt.
+            \n 4. Mix it thoroughly. Place the breaded chicken into the 350 degree oil. Fry each piece for 14 minutes."
         </item>
     </string-array>
 
     <string-array name="Ingredients">
         <item>
-            "* 6 chicken thighs\n* 3 cups buttermilk\n* 1/2 cup Buffalo Hot Sauce (optional)\n
-             * 2 teaspoons salt\n* 1 teaspoon pepper
-            "
+            "\n > 6 chicken thighs
+            \n > 3 cups buttermilk\n* 1/2 cup Buffalo Hot Sauce (optional)
+            \n > 2 teaspoons salt\n* 1 teaspoon pepper
+            \n"
         </item>
     </string-array>
 
